--- a/contacts.html
+++ b/contacts.html
@@ -32,7 +32,7 @@
                 Контакты
             </h1>
             <div class="info_wrap">
-                <p class="contacts_info">Почта: nargumbaeva@gmail.com</p>
+                <p class="contacts_info">Почта: makhanbetovanargiz@gmail.com</p>
                 <p class="contacts_info">Телефон: +7(771)-555-43-00 </p>
                 <p class="contacts_info">Инстаграм: @nargumbayeva </p>
                 <p class="contacts_info">Телеграмм: @Nnnnnargiz </p>
